--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title></title>
 </head>
 <body>
-    <a href="#">首页</a>
+    <a href="index.html">首页</a>
     <a href="page.html">跳转</a>
+    <a href="h.html">h</a>
     <h1>hello</h1>
 </body>
 </html>
