--- a/Swiper-Invitation/index.html
+++ b/Swiper-Invitation/index.html
@@ -227,7 +227,7 @@
         <div class="swiper-button-next rotate"></div>
         <div class="swiper-scrollbar"></div>
     </div>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=ek56ib7vlmLbQv2qxcv7NFez3CfyrWLI"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=ek56ib7vlmLbQv2qxcv7NFez3CfyrWLI"></script>
     <script src="swiper.js"></script>
     <script src="swiper.animate1.0.2.min.js"></script>
     <script>
