--- a/Swiper-Invitation/index.html
+++ b/Swiper-Invitation/index.html
@@ -170,7 +170,7 @@
                     <img class="amious" style="opacity:0.64" src="img/15.png" alt="">
                     <p id="item" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1s">盛邦升华（泊职）培训基地</p>
                     <div class="show"><span  class="ani" swiper-animate-effect="bounceInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">Vue</span></div>
-                    <a class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.4s" href="https://huanghaoyue123.github.io/vue/baidu/" id="shan">Vue做的百度首页,只适应pc端</a>
+                    <a class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.4s" href="https://huanghaoyue123.github.io/vue/baidu/" id="shan">Vue做的百度首页</a>
                     <img class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.8s" id="pic" src="img/20.png" alt="">
                 </div>
                 <div class="bottom"> 
